--- a/src/Component/Person.css
+++ b/src/Component/Person.css
@@ -1,32 +1,49 @@
 .person {
-  display: flex;
-  background-color: rgb(242, 245, 247);
-  padding: 10px;
-  width: 400px;
-}
-.person:hover {
-  border: solid 0.1px hotpink;
+   display: flex;
+   justify-content: space-between;
+   background-color: rgb(242, 245, 247);
+   padding: 15px;
+   width: 450px;
+   transition: all 0.5s ease;
+   border-bottom: 0.5px solid rgba(158, 155, 155, 0.5);
 }
 .personImage {
-  width: 70px;
-  height: 70px;
-  border-radius: 100px;
-  background-color: yellow;
-  margin: 2px 8px;
-  align-self: center;
+   width: 70px;
+   height: 70px;
+   margin: 2px 8px;
+   align-self: center;
 }
-.personImage image {
-  width: 100%;
+.personImage img {
+   width: 100%;
+   height: 100%;
+   border-radius: 100px;
+   object-fit: cover;
 }
 .personDetails {
-  align-self: center;
+   align-self: center;
 }
 .name {
-  font-size: 18px;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  opacity: 0.7;
-  font-weight: bold;
+   font-size: 18px;
+   font-family: Georgia, 'Times New Roman', Times, serif;
+   opacity: 0.7;
+   font-weight: bold;
+   text-transform: capitalize;
 }
 .age {
-  opacity: 0.6;
+   opacity: 0.6;
+}
+.delete-icon {
+   align-self: center;
+   color: rgb(248, 101, 101);
+   cursor: pointer;
+   font-size: 18px;
+   transition: all 0.2s ease;
+}
+.delete-icon:hover {
+   color: red;
+}
+@media screen and (max-width: 700px) {
+   .person {
+      width: 300px;
+   }
 }
