--- a/src/Component/ShowPerson/ShowPerson.css
+++ b/src/Component/ShowPerson/ShowPerson.css
@@ -1,32 +1,35 @@
 .showPerson {
-  display: flex;
-  background-color: rgb(242, 245, 247);
-  padding: 30px;
-  width: 100%;
-  box-sizing: border-box;
-  box-shadow: 0 4px 10px;
+   display: flex;
+   background-color: rgb(242, 245, 247);
+   padding: 30px;
+   width: 100%;
+   box-sizing: border-box;
+   box-shadow: 0 4px 7px rgba(78, 78, 78, 0.555);
+   border-radius: 5px;
 }
 .showPersonImage {
-  width: 200px;
-  height: 200px;
-  border-radius: 100%;
-  background-color: yellow;
-  align-self: center;
-  margin-right: 20px;
+   width: 200px;
+   height: 200px;
+   align-self: center;
+   margin-right: 20px;
 }
-.showPersonImage image {
-  width: 100%;
+.showPersonImage img {
+   width: 200px;
+   height: 100%;
+   object-fit: cover;
+   border-radius: 100%;
 }
 .showPersonDetails {
-  align-self: center;
+   align-self: center;
 }
 .personName {
-  font-size: 35px;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  opacity: 0.7;
-  font-weight: bold;
+   font-size: 35px;
+   font-family: Georgia, 'Times New Roman', Times, serif;
+   opacity: 0.7;
+   font-weight: bold;
+   text-transform: capitalize;
 }
 .personAge {
-  font-size: 20px;
-  opacity: 0.6;
+   font-size: 20px;
+   opacity: 0.6;
 }
